# frankensearch

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  install.sh
.github/workflows/: ci.yml
crates/frankensearch-core/src/: canonicalize.rs  query_class.rs  traits.rs
crates/frankensearch-durability/: Cargo.toml
crates/frankensearch-durability/src/: codec.rs  file_protector.rs  fsvi_protector.rs  tantivy_wrapper.rs
crates/frankensearch-embed/: Cargo.toml
crates/frankensearch-embed/src/: api_provider.rs  auto_detect.rs  fastembed_embedder.rs  lib.rs  model_download.rs  model_manifest.rs
crates/frankensearch-fsfs/: Cargo.toml
crates/frankensearch-fsfs/src/: catalog.rs  concurrency.rs  explainability_screen.rs  lib.rs  lifecycle.rs  main.rs  pressure.rs  query_expansion.rs  runtime.rs
crates/frankensearch-fsfs/src/adapters/: cli.rs
crates/frankensearch-fsfs/tests/: filesystem_chaos.rs
crates/frankensearch-fusion/src/: lib.rs  mmr.rs  rrf.rs  searcher.rs  sync_searcher.rs
crates/frankensearch-fusion/tests/: interaction_integration.rs  sync_searcher_tests.rs
crates/frankensearch-index/src/: in_memory.rs  lib.rs  search.rs  simd.rs  two_tier.rs
crates/frankensearch-index/tests/: in_memory_tests.rs
crates/frankensearch-lexical/src/: cass_compat.rs  lib.rs
crates/frankensearch-ops/: Cargo.toml
crates/frankensearch-ops/src/: data_source.rs  storage.rs
crates/frankensearch-rerank/src/: lib.rs
crates/frankensearch-storage/: Cargo.toml
crates/frankensearch-storage/src/: connection.rs  content_hash.rs  document.rs  history.rs  index_metadata.rs  job_queue.rs  pipeline.rs  schema.rs
frankensearch/examples/: bench_quick.rs
frankensearch/src/: lib.rs
scripts/: install.sh
